2009-12-19  MORITA Hajime  <morrita@gmail.com>

        Reviewed by Darin Adler.

        WebCore::Range::surroundContents NULL pointer crash.

        https://bugs.webkit.org/show_bug.cgi?id=31684

        Test: fast/dom/Range/31684.html

        * dom/Range.cpp:
        (WebCore::Range::surroundContents):
        throw exception when parentOfNewParent->parentNode() is NULL.

2009-12-19  Christian Dywan  <christian@twotoasts.de>

        Reviewed by Gustavo Noronha Silva.

        Don't use an icon for all spelling guess menu items.

        * platform/gtk/ContextMenuItemGtk.cpp:
        (WebCore::gtkStockIDFromContextMenuAction):

2009-12-19  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Unreviewed build fix. Missing \.

        * GNUmakefile.am:

2009-12-19  Evan Martin  <evan@chromium.org>

        Reviewed by Gustavo Noronha Silva.

        Make --disable-geolocation and --disable-svg work, by conditionally
        building the relevant files.

        * GNUmakefile.am:

2009-12-18  Peter Kasting  <pkasting@google.com>

        Reviewed by Simon Fraser.

        Add a comment about some confusing code that otherwise would look like
        it might be a bug.
        https://bugs.webkit.org/show_bug.cgi?id=32534

        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::updateScrollInfoAfterLayout):

2009-12-18  Nikolas Zimmermann  <nzimmermann@rim.com>

        Not reviewed. Messed up the XCode file, trying to fix.

        * WebCore.xcodeproj/project.pbxproj:

2009-12-18  Nikolas Zimmermann  <nzimmermann@rim.com>

        Not reviewed, fix typos in WebCore.xcodeproj.

        * WebCore.xcodeproj/project.pbxproj:

2009-12-18  Nikolas Zimmermann  <nzimmermann@rim.com>

        Reviewed by Eric Seidel.

        SVGAngle / SVGPreserveAspectRatio should be POD types
        https://bugs.webkit.org/show_bug.cgi?id=32758

        Convert SVGAngle / SVGPreserveAspectRatio to be non-refcounted types, just