@@ -267,9 +267,12 @@ IDL_BINDINGS += \
 	WebCore/page/DOMSelection.idl \
 	WebCore/page/DOMWindow.idl \
 	WebCore/page/EventSource.idl \
+	WebCore/page/Geolocation.idl \
+	WebCore/page/Geoposition.idl \
 	WebCore/page/History.idl \
 	WebCore/page/Location.idl \
 	WebCore/page/Navigator.idl \
+	WebCore/page/PositionError.idl \
 	WebCore/page/Screen.idl \
 	WebCore/page/WebKitPoint.idl \
 	WebCore/page/WorkerNavigator.idl \
@@ -349,6 +352,10 @@ webcore_sources += \
 	WebCore/bindings/js/JSClipboardCustom.cpp \
 	WebCore/bindings/js/JSConsoleCustom.cpp \
 	WebCore/bindings/js/JSCoordinatesCustom.cpp \
+	WebCore/bindings/js/JSCustomPositionCallback.cpp \
+	WebCore/bindings/js/JSCustomPositionCallback.h \
+	WebCore/bindings/js/JSCustomPositionErrorCallback.cpp \
+	WebCore/bindings/js/JSCustomPositionErrorCallback.h \
 	WebCore/bindings/js/JSCustomVoidCallback.cpp \
 	WebCore/bindings/js/JSCustomVoidCallback.h \
 	WebCore/bindings/js/JSCustomXPathNSResolver.cpp \
@@ -376,6 +383,7 @@ webcore_sources += \
 	WebCore/bindings/js/JSEventTarget.h \
 	WebCore/bindings/js/JSExceptionBase.cpp \
 	WebCore/bindings/js/JSExceptionBase.h \
+	WebCore/bindings/js/JSGeolocationCustom.cpp \
 	WebCore/bindings/js/JSHTMLAllCollectionCustom.cpp \
 	WebCore/bindings/js/JSHTMLAppletElementCustom.cpp \
 	WebCore/bindings/js/JSHTMLAppletElementCustom.h \
@@ -1345,6 +1353,14 @@ webcore_sources += \
 	WebCore/page/FrameTree.h \
 	WebCore/page/FrameView.cpp \
 	WebCore/page/FrameView.h \
+	WebCore/page/Geolocation.cpp \
+	WebCore/page/Geolocation.h \
+	WebCore/page/GeolocationController.cpp \
+	WebCore/page/GeolocationController.h \
+	WebCore/page/GeolocationControllerClient.h \
+	WebCore/page/GeolocationError.h \
+	WebCore/page/GeolocationPosition.h \
+	WebCore/page/Geoposition.h \
 	WebCore/page/HaltablePlugin.h \
 	WebCore/page/History.cpp \
 	WebCore/page/History.h \
@@ -1367,6 +1383,10 @@ webcore_sources += \
 	WebCore/page/PluginHalter.cpp \
 	WebCore/page/PluginHalter.h \
 	WebCore/page/PluginHalterClient.h \
+	WebCore/page/PositionCallback.h \
+	WebCore/page/PositionError.h \
+	WebCore/page/PositionErrorCallback.h \
+	WebCore/page/PositionOptions.h \
 	WebCore/page/PrintContext.cpp \
 	WebCore/page/PrintContext.h \
 	WebCore/page/Screen.cpp \
@@ -1423,6 +1443,8 @@ webcore_sources += \
 	WebCore/platform/FileChooser.h \
 	WebCore/platform/FileSystem.h \
 	WebCore/platform/FloatConversion.h \
+	WebCore/platform/GeolocationService.cpp \
+	WebCore/platform/GeolocationService.h \
 	WebCore/platform/HostWindow.h \
 	WebCore/platform/KeyboardCodes.h \
 	WebCore/platform/KURL.cpp \
@@ -1440,6 +1462,8 @@ webcore_sources += \
 	WebCore/platform/Logging.h \
 	WebCore/platform/MIMETypeRegistry.cpp \
 	WebCore/platform/MIMETypeRegistry.h \
+	WebCore/platform/mock/GeolocationServiceMock.cpp \
+	WebCore/platform/mock/GeolocationServiceMock.h \
 	WebCore/platform/NotImplemented.h \
 	WebCore/platform/Pasteboard.h \
 	WebCore/platform/PlatformKeyboardEvent.h \
@@ -2253,7 +2277,6 @@ FEATURE_DEFINES_JAVASCRIPT += ENABLE_DOM_STORAGE=1
 
 IDL_BINDINGS += \
 	WebCore/storage/Storage.idl \
-	WebCore/page/PositionError.idl \
 	WebCore/storage/StorageEvent.idl
 
 webcore_cppflags += \
@@ -2639,41 +2662,12 @@ endif # END ENABLE_FILTERS
 if ENABLE_GEOLOCATION
 
 FEATURE_DEFINES_JAVASCRIPT += ENABLE_GEOLOCATION=1
-
-IDL_BINDINGS += \
-	WebCore/page/Geolocation.idl \
-	WebCore/page/Geoposition.idl
-
 webcore_cppflags += \
 	-DENABLE_GEOLOCATION=1
-
-webcore_sources += \
-	WebCore/bindings/js/JSCustomPositionCallback.cpp \
-	WebCore/bindings/js/JSCustomPositionCallback.h \
-	WebCore/bindings/js/JSCustomPositionErrorCallback.cpp \
-	WebCore/bindings/js/JSCustomPositionErrorCallback.h \
-	WebCore/bindings/js/JSGeolocationCustom.cpp \
-	WebCore/page/Geolocation.cpp \
-	WebCore/page/Geolocation.h \
-	WebCore/page/GeolocationController.cpp \
-	WebCore/page/GeolocationController.h \
-	WebCore/page/GeolocationControllerClient.h \
-	WebCore/page/GeolocationError.h \
-	WebCore/page/GeolocationPosition.h \
-	WebCore/page/Geoposition.h \
-	WebCore/page/PositionCallback.h \
-	WebCore/page/PositionError.h \
-	WebCore/page/PositionErrorCallback.h \
-	WebCore/page/PositionOptions.h \
-	WebCore/platform/GeolocationService.cpp \
-	WebCore/platform/GeolocationService.h \
-	WebCore/platform/mock/GeolocationServiceMock.cpp \
-	WebCore/platform/mock/GeolocationServiceMock.h
 
 webcoregtk_sources += \
 	WebCore/platform/gtk/GeolocationServiceGtk.cpp \
 	WebCore/platform/gtk/GeolocationServiceGtk.h
-
 endif # END ENABLE_GEOLOCATION
 
 # ----
